--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <h4 class="grey-text text-darken-4 center-align">
             Experience<br>
             <span>
-                <a href="/img/GUYO KAWET new CV.pdf" class="btn-floating indigo" >
+                <a href="/img/tuffa---resume--pdf.pdf" class="btn-floating indigo" >
                     <i class=" tooltipped material-icons" data-tooltip="Download Resume">
                         file_download
                     </i>
